@@ -1,4 +1,7 @@
 
+leachbj - Fri October 1 2004
+	merged wav record/playback patch from Prashant
+
 leachbj - Sat Septemper  4 2004
 	merged Nimesweeper port from matthis
 
